--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
   "require": {
     "php": ">=5.4.0",
     "domnikl/statsd": "~2.1",
-    "zendframework/zendframework": "~2.2"
+    "zendframework/zend-modulemanager": "~2.2",
+    "zendframework/zend-servicemanager": "~2.2"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.3"
