--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,37 @@
 language: php
 
-php:
-  - 5.4
-  - 5.5
-  - 5.6
-  - 7
-  - hhvm
-
 matrix:
-  allow_failures:
+  fast_finish: true
+  include:
+    - php: 5.5
+      env:
+        - DEPS=lowest
+    - php: 5.5
+      env:
+        - DEPS=latest
+    - php: 5.6
+      env:
+        - DEPS=lowest
+    - php: 5.6
+      env:
+        - DEPS=latest
+    - php: 7
+      env:
+        - DEPS=lowest
+    - php: 7
+      env:
+        - DEPS=latest
     - php: hhvm
+      env:
+        - DEPS=lowest
+    - php: hhvm
+      env:
+        - DEPS=latest
 
 install:
-  - composer install --no-interaction
+  - if [[ $DEPS == 'latest' ]]; then travis_retry composer update --no-interaction --prefer-source ; fi
+  - if [[ $DEPS == 'lowest' ]]; then travis_retry composer update --no-interaction --prefer-source --prefer-lowest ; fi
+  - composer info -i
 
-script: phpunit
+script:
+- ./vendor/bin/phpunit
