--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
     }
   ],
   "require": {
-    "php": ">=5.4.0",
+    "php": ">=5.5 || ^7.0",
     "domnikl/statsd": "~2.1",
-    "zendframework/zend-modulemanager": "~2.2",
-    "zendframework/zend-servicemanager": "~2.2 || ^3"
+    "zendframework/zend-modulemanager": "^2.4",
+    "zendframework/zend-servicemanager": "^2.6 || ^3"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.3"
