--- a/.travis.yml
+++ b/.travis.yml
@@ -3,24 +3,24 @@ language: php
 matrix:
   fast_finish: true
   include:
-    - php: 5.5
-      env:
-        - DEPS=lowest
-    - php: 5.5
-      env:
-        - DEPS=latest
-    - php: 5.6
-      env:
-        - DEPS=lowest
-    - php: 5.6
-      env:
-        - DEPS=latest
-    - php: 7
-      env:
-        - DEPS=lowest
-    - php: 7
-      env:
-        - DEPS=latest
+#    - php: 5.5
+#      env:
+#        - DEPS=lowest
+#    - php: 5.5
+#      env:
+#        - DEPS=latest
+#    - php: 5.6
+#      env:
+#        - DEPS=lowest
+#    - php: 5.6
+#      env:
+#        - DEPS=latest
+#    - php: 7
+#      env:
+#        - DEPS=lowest
+#    - php: 7
+#      env:
+#        - DEPS=latest
     - php: hhvm
       env:
         - DEPS=lowest
@@ -34,4 +34,4 @@ install:
   - composer info -i
 
 script:
-- ./vendor/bin/phpunit
+- ./vendor/bin/phpunit --verbose --debug
