--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "zendframework/zend-servicemanager": "^2.6 || ^3"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.3"
+    "phpunit/phpunit": "^4.8"
   },
   "autoload": {
     "psr-4": {
