--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
     }
   ],
   "require": {
-    "php": ">=5.5 || ^7.0",
-    "domnikl/statsd": "~2.1",
+    "php": ">=5.6",
+    "domnikl/statsd": "^2.1",
     "zendframework/zend-modulemanager": "^2.4",
     "zendframework/zend-servicemanager": "^2.6 || ^3"
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.8"
+    "phpunit/phpunit": "^5.6.25 || ^6.5.5"
   },
   "autoload": {
     "psr-4": {
